Fixed some more color contrast issues.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8229,7 +8229,7 @@ video {
 }
 
 .btn-teal {
-  background-color: #8ddbc1;
+  background-color: #9EE0CA;
   color: #323c5f;
 }
 
